fix: workflow typos

--- a/.github/workflows/pr-test-4.yml
+++ b/.github/workflows/pr-test-4.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/checkout@v4
         name: checkout with ref
         with:
-          ref: { github.event.pull_request.head.sha }}
+          ref: ${{ github.event.pull_request.head.sha }}
       - name: cat a.out
         run: |
           git show HEAD
