--- a/.github/workflows/pr-test-3.yml
+++ b/.github/workflows/pr-test-3.yml
@@ -10,6 +10,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+        with:
+          ref: ${{ github.event.pull_request.head.sha }}
         name: checkout with ref
       - name: cat a.out
         run: |
